global update
