# docs/swagger.json
@@ -22,9 +22,14 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/auth/login": {
+        "/apples/create_apple": {
             "post": {
-                "description": "Authenticate user and return JWT access token",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Creates Apple",
                 "consumes": [
                     "application/json"
                 ],
@@ -32,26 +37,28 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "apple"
                 ],
-                "summary": "User login",
+                "summary": "CreateApple",
                 "parameters": [
                     {
-                        "description": "User credentials",
-                        "name": "credentials",
+                        "description": "Apple creation payload",
+                        "name": "peoduct",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.LoginRequest"
+                            "$ref": "#/definitions/dto.CreateAppleInput"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "access_token, token_type, expires_in",
+                    "201": {
+                        "description": "status: Apple created",
                         "schema": {
                             "type": "object",
-                            "additionalProperties": true
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     },
                     "400": {
@@ -64,7 +71,16 @@
                         }
                     },
                     "401": {
-                        "description": "invalid credentials",
+                        "description": "unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "internal error",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -75,14 +91,14 @@
                 }
             }
         },
-        "/orders": {
-            "post": {
+        "/apples/delete_apple/{id}": {
+            "delete": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Creates a new order and publishes an event to RabbitMQ",
+                "description": "Delete Apple",
                 "consumes": [
                     "application/json"
                 ],
@@ -90,23 +106,146 @@
                     "application/json"
                 ],
                 "tags": [
-                    "orders"
+                    "apple"
                 ],
-                "summary": "Create a new order",
+                "summary": "DeleteApple",
+                "responses": {
+                    "200": {
+                        "description": "status: Apple delete",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "invalid payload",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "internal error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/apples/get_apple/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get Apple",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "apple"
+                ],
+                "summary": "GetApple",
                 "parameters": [
                     {
-                        "description": "Order creation payload",
-                        "name": "order",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/order.CreateOrderCmd"
-                        }
+                        "type": "string",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "status: order created \u0026 event published",
+                    "200": {
+                        "description": "status: Apple",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "invalid payload",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "internal error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/apples/update_apple/{id}": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Update Apple",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "apple"
+                ],
+                "summary": "UpdateApple",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "status: Apple",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -146,29 +285,10 @@
         }
     },
     "definitions": {
-        "handler.LoginRequest": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string",
-                    "minLength": 8
-                }
-            }
-        },
-        "order.CreateOrderCmd": {
+        "dto.CreateAppleInput": {
             "type": "object",
             "properties": {
-                "amount": {
-                    "type": "number"
-                },
-                "user_id": {
+                "name": {
                     "type": "string"
                 }
             }
