# internal/apple/controller/http_router/v1/delete_apple.go
@@ -1,0 +1,18 @@
+package v1
+
+import "net/http"
+
+// @Summary DeleteApple
+// @Description Delete Apple
+// @Tags apple
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Success 200 {object} map[string]string "status: Apple delete"
+// @Failure 400 {object} map[string]string "invalid payload"
+// @Failure 401 {object} map[string]string "unauthorized"
+// @Failure 500 {object} map[string]string "internal error"
+// @Router /apples/delete_apple/{id} [delete]
+func (h *Handlers) DeleteApple(w http.ResponseWriter, r *http.Request) {
+
+}
